--- a/index.html
+++ b/index.html
@@ -135,26 +135,36 @@
                                     <li>
                                         <img src="./images/html.png" alt="">
                                         <span class="icon_text1">HTML</span>
+                                        <span class="tooltip">HTML의 기본 문법과 태그를 자유롭게 다룰 수 있으며, 모바일 최적화 웹 페이지, 반응형 웹 디자인,
+                                            웹 접근성 등 다양한 페이지를 만들 수 있습니다.</span>
                                     </li>
                                     <li>
                                         <img src="./images/css.png" alt="">
                                         <span class="icon_text2">CSS</span>
+                                        <span class="tooltip">다양한 CSS 속성과 선택자를 자유롭게 다룰 수 있으며 디자인을 할 수 있습니다.</span>
                                     </li>
                                     <li>
                                         <img src="./images/jquery.png" alt="">
                                         <span class="icon_text3">JQUERY</span>
+                                        <span class="tooltip">jQuery로 스크롤 이벤트를 이용하여, 사용자가 웹 페이지를 스크롤할 때 동적인 기능을 구현할 수
+                                            있으며, 슬라이드 메뉴를 구현할 수 있습니다.</span>
                                     </li>
                                     <li>
                                         <img src="./images/js.png" alt="">
                                         <span class="icon_text4">JS</span>
+                                        <span class="tooltip">JS를 이용하여 간단한 버튼 클릭 이벤트 기능을 구현할 수 있으며, 햄버거 버튼을 통해 풀 스크린 메뉴를
+                                            구현할 수 있습니다.</span>
                                     </li>
                                     <li>
                                         <img src="./images/react.png" alt="">
                                         <span class="icon_text5">REACT</span>
+                                        <span class="tooltip">컴포넌트와 배열을 적절히 사용할 수 있으며 부트스트랩을 통한 다양한 효과를 넣을수
+                                            있습니다.</span>
                                     </li>
                                     <li>
                                         <img src="./images/xd.png" alt="">
                                         <span class="icon_text6">XD</span>
+                                        <span class="tooltip">와이어프레임 작업, 디자인 작업, 이미지 합성을 사용할 수 있습니다.</span>
                                     </li>
                                 </ul>
                             </li>
