--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <Link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" media="screen and (max-width:1520px)" href="./css/main_1520.css">
+    <link rel="stylesheet" media="screen and (max-width:1000px)" href="./css/main_1000.css">
+    <link rel="stylesheet" media="screen and (max-width:780px)" href="./css/main_780.css">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <title>KIK Portfolio</title>
 
@@ -113,12 +116,7 @@
                 <div class="info">
                     <h1>About Me</h1>
                     <div class="info_img">
-                        <img src="./images/company.png" alt="" width="800px">
-                        <ul>
-                            <li>Address : 경남 김해시 월산로26</li>
-                            <li>Email : rladlsrnr1997@naver.com</li>
-                            <li>Phone : 010-2312-4229</li>
-                        </ul>
+                        <img src="./images/company.png" alt="">
                     </div>
                     <div class="info_text">
                         <ul>
@@ -179,7 +177,7 @@
                 <div class="list">
                     <h1>Project</h1>
                     <ul>
-                        <li>
+                        <li class="list_img">
                             <a href="http://rladlsrnr1997.dothome.co.kr/" target="_blank"><img src="./images/hazzys.png"
                                     alt="" /></a>
                         </li>
@@ -192,7 +190,7 @@
                         </li>
                     </ul>
                     <ul>
-                        <li>
+                        <li class="list_img">
                             <a href="https://inkook97.github.io/test2/" target="_blank"><img src="./images/home.png"
                                     alt="" /></a>
                         </li>
@@ -205,7 +203,7 @@
                         </li>
                     </ul>
                     <ul>
-                        <li>
+                        <li class="list_img">
                             <a href="https://0518.netlify.app" target="_blank"><img src="./images/namyang.png"
                                     alt="" /></a>
                         </li>
@@ -215,10 +213,11 @@
                             <p>스킬 : HTML, CSS, React</p>
                             <p>내용 : 리액트 컴포넌트와 배열로 제작, 부트스트랩 사용</p>
                             <p>작업인원 : 2명</p>
+                            <p>작업기여도 : 90%</p>
                         </li>
                     </ul>
                     <ul>
-                        <li>
+                        <li class="list_img">
                             <a href="https://0524h.netlify.app" target="_blank"><img src="./images/hyungji.png"
                                     alt="" /></a>
                         </li>
